# openvr_sample

./: CMakeLists.txt  images.qrc  shader.qrc
cmake/: FindOpenVR.cmake
geometry/: cube.cpp  cube.h  drawable.cpp  drawable.h  skybox.cpp  skybox.h
glbase/: CMakeLists.txt  README  geomload.cpp  geomload.hpp  tiny_obj_loader.cc  tiny_obj_loader.h
gui/: config.cpp  config.h  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
shader/: distortion.fs.glsl  distortion.vs.glsl  mvp_pnt.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  texture.fs.glsl
vr/: CGLRenderModel.cpp  CGLRenderModel.hpp  distortion.cpp  distortion.hpp  hmd.cpp  hmd.h
